Move to runtime check of valid font DPI

The current code checks if we have an entry, but not that the entry is
sane.

BUG: 449918
FIXED-IN: 5.24.1